# meal_planner

./: .gitignore  Caddyfile  Cargo.toml  Dockerfile  LICENSE  README.md  docker_create.sh  package-lock.json  package.json  playwright.config.ts
.github/: copilot-instructions.md
.github/workflows/: on_commit.yaml
meal-planner-app/: Cargo.toml  Dioxus.toml
meal-planner-app/assets/: tailwind.css
meal-planner-app/assets/locales/en-US/: main.ftl
meal-planner-app/assets/locales/pl-PL/: main.ftl
meal-planner-app/assets/styling/: db_manager.css  main.css  product_related.css  side_bar.css
meal-planner-app/src/: i18n.rs  main.rs
meal-planner-app/src/components/: action_bar.rs  layout.rs  main_view.rs  mod.rs
meal-planner-app/src/components/db_manager/: db_manager_view.rs  mod.rs  product.rs
meal-planner-app/src/components/db_manager/actions/: add.rs  copy.rs  db_operation_helper.rs  mod.rs  modify.rs  popup.rs  product_overlay.rs  search.rs
meal-planner-app/src/components/food_swapper/: mod.rs  swap_food_view.rs
meal-planner-app/src/components/meal_planner/: meal_plan_view.rs  mod.rs
meal-planner-app/src/components/product_related/: allowed_units.rs  macro_elements.rs  micro_nutrients.rs  mod.rs  product.rs
meal-planner-lib/: Cargo.toml
meal-planner-lib/src/: lib.rs
meal-planner-lib/src/bl/: constraints_solver.rs  mod.rs  swap_products.rs
meal-planner-lib/src/data_types/: constraints.rs  macro_elements.rs  micro_nutrients.rs  mod.rs  product.rs  product_data_types.rs
meal-planner-lib/src/data_types/constraints/: day_plan_constraint.rs  meal_constraint.rs  mod.rs  nutrient_constraint.rs  product_constraint.rs
meal-planner-lib/src/database_access/: db_wrapper.rs  mock_db.rs  mod.rs
meal-planner-lib/src/database_access/local_db_cont/: local_db.rs  local_db_generic.rs  local_db_wasm.rs  mod.rs  wasm_worker.js  wasm_worker_client.rs
meal-planner-lib/src/db_wrappers/: db_wrapper.rs  mock_db.rs  mod.rs
meal-planner-lib/src/db_wrappers/db_mock/: mod.rs
meal-planner-lib/src/db_wrappers/local_db_cont/: local_db.rs  mod.rs
meal-planner-lib/src/db_wrappers/open_food_facts_db_cont/: mod.rs
meal-planner-lib/tests/: integration_constraints.rs
playwright-report/: index.html
tests/: side_bar.test.ts
