[package]
name = "meal-planner-app"
version = "0.1.0"
authors = ["Jacek Multan <kecajorigami@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = [] }
tracing = "0.1.43"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3" }

[features]
default = ["desktop"]
# The feature that is only required for the web build target should be optional and only enabled in the web feature
web = ["dioxus/web"]
# The desktop feature is only required for desktop builds and should be enabled only in that context.
desktop = ["dioxus/desktop"]
# The feature that is only required for the mobile build target should be optional and only enabled in the mobile feature
mobile = ["dioxus/mobile"]

[lints.clippy]
pedantic = { level = "deny", priority = 1 }
missing_errors_doc = { level = "allow", priority = 2 }
assigning_clones = { level = "allow", priority = 2 }
cast_possible_wrap = { level = "allow", priority = 2 }
