[package]
name = "meal-planner-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
approx = "0.5.1"
const_format = "0.2.35"
microlp = "0.2.11"
strum = "0.27.2"
strum_macros = "0.27.2"

[target.'cfg(not(all(target_arch = "wasm32", target_os = "emscripten")))'.dependencies]
rusqlite = "0.37.0"

[lints.clippy]
pedantic = { level = "deny", priority = 1 }
missing_errors_doc = { level = "allow", priority = 2 }
assigning_clones = { level = "allow", priority = 2 }
cast_possible_wrap = { level = "allow", priority = 2 }
