[package]
name = "meal-planner-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
approx = "0.5.1"
const_format = "0.2.35"
microlp = "0.2.11"
strum = "0.27.2"
strum_macros = "0.27.2"
futures = "0.3.31"
once_cell = "1.19.0"
log = "0.4.22"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libsqlite3-sys = "0.28.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
sqlite-wasm-rs = { version = "0.4.8", default-features = false, features = [
    "precompiled",
] }

[features]
default = []
test-utils = []

[lints.clippy]
pedantic = { level = "deny", priority = 1 }
missing_errors_doc = { level = "allow", priority = 2 }
assigning_clones = { level = "allow", priority = 2 }
cast_possible_wrap = { level = "allow", priority = 2 }
